# textmood

./: .gitignore  README.md  pyproject.toml
tests/: test_scorer.py
textmood/: __init__.py  __main__.py  cli.py  printer.py  scorer.py
